[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64"]

[project]
name="simulateTestCases"
version="0.1.0"
description="A package for running a series of ADflow simulations using mphys and openMDAO"
authors=[{name="Sinaendhran Pujali Elilarasan"},]
readme = "README.md"
requires-python = ">=3.9"

classifiers=[
        'Programming Language :: Python :: 3',
        'License :: OSI Approved :: MIT License',
        'Operating System :: OS Independent',
    ]

[project.urls]
Homepage = "https://github.com/gorodetsky-umich/simulateTestCases.git"